You belong here

--- a/index.html
+++ b/index.html
@@ -748,6 +748,7 @@ const webColors = [
 ]
 
 const messages = [
+  'You belong here.',
   '&ldquo;Correct by Construction&rdquo; is a good goal to strive for.',
   'The Liskov Substitution Principle (the L of SOLID) is named for Barbara Liskov.',
 ]
