Add bunch of quotes of remote working inclusive
From https://www.theremoteworkers.com/remotefriendly/10-inspirational-quotes-about-remote-work-remote-teams

--- a/index.html
+++ b/index.html
@@ -751,6 +751,12 @@ const messages = [
   'You belong here.',
   '&ldquo;Correct by Construction&rdquo; is a good goal to strive for.',
   'The Liskov Substitution Principle (the L of SOLID) is named for Barbara Liskov.',
+  "'In teamwork, silence isn’t golden, it’s deadly.' - Mark Sanborn - Author & Keynote speaker [https://www.theremoteworkers.com/remotefriendly/10-inspirational-quotes-about-remote-work-remote-teams]", 
+  "'Telecommuting, one of many forms of work-life flexibility, should no longer be viewed as a nice-to-have, optional perk mostly used by working moms. These common stereotypes don’t match reality—allowing employees to work remotely is a core business strategy today… We need to de-parent, de-gender, and de-age the perception of the flexible.' CALI WILLIAMS YOST – CEO AND FOUNDER OF FLEX+STRATEGY GROUP AND WORK+LIFE FIT",
+  "'To collaborative team members, completing one another is more important than competing with one another.' JOHN C MAXWELL – CHRISTIAN AUTHOR & SPEAKER ON LEADERSHIP",
+  "'Women are working more, men are understanding their value as caregivers, women are primary breadwinners—I mean, we could go on and on and on. Things are different. So we can’t keep operating like everything is the same, and that’s what many of us have done. And I think it’s up to us to change the conversation.' MICHELLE OBAMA, EX FIRST LADY OF USA",
+  "'Workers at 37signals needn’t ask permission to go on vacation or specify how much time they’ll take.  We tell them:  just be reasonable, put it on the calendar, and coordinate with your coworkers. If you let them, humans have an amazing power to live up to your high expectations of reasonableness and responsibility.' DAVID HEINEMEIER HANSSON – AUTHOR (REMOTE: OFFICE NOT REQUIRED)",
+  "'We like to give people the freedom to work where they want, safe in the knowledge that they have the drive and expertise to perform excellently, whether they are at their desk or in their kitchen. Yours truly has never worked out of an office, and never will.' RICHARD BRANSON – FOUNDER & CEO OF VIRGIN",
 ]
 
 function randomInt(cap) {
