Add a few new messages

--- a/index.html
+++ b/index.html
@@ -749,14 +749,16 @@ const webColors = [
 
 const messages = [
   'You belong here.',
-  '&ldquo;Correct by Construction&rdquo; is a good goal to strive for.',
   'The Liskov Substitution Principle (the L of SOLID) is named for Barbara Liskov.',
   "&ldquo;In teamwork, silence isn’t golden, it’s deadly.&rdquo; —Mark Sanborn",
   "&ldquo;Telecommuting, one of many forms of work-life flexibility, should no longer be viewed as a nice-to-have, optional perk mostly used by working moms. These common stereotypes don’t match reality—allowing employees to work remotely is a core business strategy today… We need to de-parent, de-gender, and de-age the perception of the flexible.&rdquo; —Cali Williams Yost",
   "&ldquo;To collaborative team members, completing one another is more important than competing with one another.&rdquo; —John C. Maxwell",
   "&ldquo;Women are working more, men are understanding their value as caregivers, women are primary breadwinners—I mean, we could go on and on and on. Things are different. So we can’t keep operating like everything is the same, and that’s what many of us have done. And I think it’s up to us to change the conversation.&rdquo; —Michelle Obama",
   "&ldquo;Workers at 37signals needn’t ask permission to go on vacation or specify how much time they’ll take. We tell them: just be reasonable, put it on the calendar, and coordinate with your coworkers. If you let them, humans have an amazing power to live up to your high expectations of reasonableness and responsibility.&rdquo; —David Heinemeier Hansson",
-  "&ldquo;We like to give people the freedom to work where they want, safe in the knowledge that they have the drive and expertise to perform excellently, whether they are at their desk or in their kitchen. Yours truly has never worked out of an office, and never will.&rdquo; Richard Branson"
+  "&ldquo;We like to give people the freedom to work where they want, safe in the knowledge that they have the drive and expertise to perform excellently, whether they are at their desk or in their kitchen. Yours truly has never worked out of an office, and never will.&rdquo; —Richard&nbsp;Branson",
+  "Gender-neutral alternatives to &ldquo;guys&rdquo; include &ldquo;folks,&rdquo; &ldquo;people,&rdquo; and &ldquo;team.&rdquo;",
+  "&ldquo;If you let them, humans have an amazing power to live up to your high expectations of reasonableness and responsibility.&rdquo; —David&nbsp;Heinemeier&nbsp;Hansson",
+  "&ldquo;Every line of code represents an ethical and moral decision.&rdquo; —Grady&nbsp;Booch"
 ]
 
 function randomInt(cap) {
