Add ok to make mistakes

--- a/index.html
+++ b/index.html
@@ -755,6 +755,7 @@ const messages = [
   "&ldquo;Telecommuting [...] should no longer be viewed as a nice-to-have, optional perk mostly used by working moms [...] We need to de-parent, de-gender, and de-age the perception of the flexible.&rdquo; —Cali Williams Yost",
   "&ldquo;To collaborative team members, completing one another is more important than competing with one another.&rdquo; —John C. Maxwell",
   "&ldquo;Women are working more, men are understanding their value as caregivers, women are primary breadwinners—I mean, we could go on and on and on. Things are different. So we can’t keep operating like everything is the same.&rdquo; —Michelle Obama",
+  "Today's affirmation: &ldquo;I'm going to make mistakes today. It's ok to make a mistake.&rdquo; —Todd&nbsp;Sedano",
   "&ldquo;We like to give people the freedom to work where they want, safe in the knowledge that they have the drive and expertise to perform excellently, whether they are at their desk or in their kitchen.&rdquo; —Richard&nbsp;Branson",
   "Gender-neutral alternatives to &ldquo;guys&rdquo; include &ldquo;folks,&rdquo; &ldquo;people,&rdquo; and &ldquo;team.&rdquo;",
   "&ldquo;If you let them, humans have an amazing power to live up to your high expectations of reasonableness and responsibility.&rdquo; —David&nbsp;Heinemeier&nbsp;Hansson",
