Add Pat Wadors quote about belonging
thanks to @edespino!

--- a/index.html
+++ b/index.html
@@ -758,7 +758,8 @@ const messages = [
   "&ldquo;We like to give people the freedom to work where they want, safe in the knowledge that they have the drive and expertise to perform excellently, whether they are at their desk or in their kitchen.&rdquo; —Richard&nbsp;Branson",
   "Gender-neutral alternatives to &ldquo;guys&rdquo; include &ldquo;folks,&rdquo; &ldquo;people,&rdquo; and &ldquo;team.&rdquo;",
   "&ldquo;If you let them, humans have an amazing power to live up to your high expectations of reasonableness and responsibility.&rdquo; —David&nbsp;Heinemeier&nbsp;Hansson",
-  "&ldquo;Every line of code represents an ethical and moral decision.&rdquo; —Grady&nbsp;Booch"
+  "&ldquo;Every line of code represents an ethical and moral decision.&rdquo; —Grady&nbsp;Booch",
+  "&ldquo;Belonging: I can be authentic, I matter, and am essential to my team.&rdquo; —Pat Wadors"
 ]
 
 function randomInt(cap) {
